--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,10 +16,10 @@
         <ion-item menu-close href="#/tab/onview">
           <i class='fa fa-eye'></i> On View	
         </ion-item>  
-        <ion-item menu-close href="#/tab/museum">
+        <ion-item menu-close href="#/tab/museum/0">
           <i class='fa fa-building'></i> Explore the Museum	
         </ion-item>
-        <ion-item menu-close href="#/tab/neighborhood" >
+        <ion-item menu-close href="#/tab/neighborhood">
           <i class='fa fa-map-marker'></i> Explore the Neighborhood
         </ion-item>                      
         <ion-item menu-close href="#/tab/artists">
