--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -16,7 +16,7 @@
         <ion-item menu-close href="#/tab/onview">
           <i class='fa fa-eye'></i> On View	
         </ion-item>  
-        <ion-item menu-close href="#/tab/museum/0">
+        <ion-item menu-close href="#/tab/museum">
           <i class='fa fa-building'></i> Explore the Museum	
         </ion-item>
         <ion-item menu-close href="#/tab/neighborhood">
