--- a/www/templates/tab-museum.html
+++ b/www/templates/tab-museum.html
@@ -1,32 +1,24 @@
 <ion-view view-title="Explore the Museum">
-  <ion-content overflow-scroll="true" direction="y" delegate-handle="museumListRow" on-scroll="getScrollPosition()">
-	<div class="museumListContainer">
-		<div ng-repeat="floor in place" style="position:relative;" ng-class="highlightFloor==floor.place_id ? 'activeFloor floorBar' : 'floorBar'" id="museum_floor_{{floor.place_id}}">
-			<p class="museumFloor">{{floor.name}}</p>
-			<ion-scroll direction="x" class="museumListScroller">
-				<div class='museumList'>
-					<div class='museumListItem' ng-repeat="exhibitionResult in exhibitions[floor.place_id]">
-						<a ng-bind-html="exhibitionResult.exhibitions" href="#/tab/detail-museum/{{floor.place_id}}/{{exhibitionResult.occurrence_id}}"></a>
-					</div>
-				</div>				
-				<ion-infinite-scroll
-					on-infinite="loadMoreExhibitionsForFloor(floor.place_id)"
-					distance="10%"
-					direction="x"
-					ng-if="floorComplete(floor.place_id)">
-				</ion-infinite-scroll>
-			</ion-scroll>
+  <ion-content>
+	<div class="row buildings">
+		<div ng-repeat="building in buildings" class="col building" ng-class="(highlightBuilding==building.place_id ? ' activeBuilding' : '') + ($index==0 ? ' col-50' : ' col-25')" id="museum_building_{{building.place_id}}" ng-click="highlightTheBuilding({{building.place_id}});">
+			<img src='img/{{building.image}}'>
+			<br/>{{placeNames[building.place_id]}}
 		</div>
-	 </div>
+	</div>
+	<div ng-repeat="place in places" class="buildingFloorplans">
+		<div ng-show="highlightBuilding == {{place.place_id}}" ng-bind-html="place.children"></div>
+		<div style="clear:both;"></div>
+	</div>
+			
+	
+	
+	
+	
   </ion-content>
   <ion-footer-bar>
   		<div id="footer" class='menuToggle'>
 			<a menu-toggle="left"><img src='img/MF_logo.jpg'></a>
-		</div>
-		<div class='menuBuildings'>
-			<a ng-repeat="building in buildings" href="#/tab/museum/{{building.place_id}}" ng-class="parent_id==building.place_id ? 'activeBuilding' : ''">
-				{{building.name}}
-			</a>
 		</div>
 	</ion-footer-bar>		
 </ion-view>
