--- a/www/templates/tab-search.html
+++ b/www/templates/tab-search.html
@@ -25,6 +25,7 @@
 			</ion-list>
 			<ion-infinite-scroll
 				on-infinite="loadNextSearchPage()"
+				immediate-check="false"
 				distance="25%">
 			</ion-infinite-scroll>
 		</ion-scroll>
