--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,9 +19,9 @@
         <ion-item menu-close href="#/tab/museum">
           <i class='fa fa-building'></i> Explore the Museum	
         </ion-item>
-        <ion-item menu-close href="#/tab/neighborhood">
+        <!--<ion-item menu-close href="#/tab/neighborhood">
           <i class='fa fa-map-marker'></i> Explore the Neighborhood
-        </ion-item>                      
+        </ion-item>-->                      
         <ion-item menu-close href="#/tab/artists">
           <i class='fa fa-smile-o'></i> Artists		
         </ion-item>
