--- a/www/templates/detail-museum.html
+++ b/www/templates/detail-museum.html
@@ -16,7 +16,7 @@
 							<div class="exhibitImage" ng-if='exhibition.thumb' ng-bind-html='exhibition.thumb'></div>
 							<div class='exhibitName'>{{exhibition.name}}</div>
 							<div ng-if='exhibition.dates' class="red date">{{exhibition.dates}}</div>
-							<div ng-if='exhibition.occurrence_id' class='exhibitLink'><a href="#/tab/detail-exhibition/{{exhibition.occurrence_id}}">View Exhibiton</div>
+							<div ng-if='exhibition.occurrence_id' class='exhibitLink'><a href="#/tab/detail-exhibition/{{exhibition.occurrence_id}}">View Exhibiton</a></div>
 						</h2>
 					</ion-item>
 				</ion-list>
