--- a/www/css/style.css
+++ b/www/css/style.css
@@ -480,7 +480,7 @@ p {
 	z-index:10;
 	display:none;
 	text-align:center;
-	color:#000;
+	color:#fff;
 	font-size:10px;
 	line-height:2em;
 	overflow:visible;
